--- a/main.css
+++ b/main.css
@@ -203,6 +203,10 @@ div[style*="#FCFCCC;"] {
 	background-color: #303023 !important;
 }
 
+div[style*="#FFE7CC;"] {
+	background-color: #322312 !important;
+}
+
 div#editpage-specialchars a {
 	background-color: black;
 }
