--- a/main.css
+++ b/main.css
@@ -10,6 +10,20 @@ a:visited {
 	background-color: #000 !important;
 }
 
+#mw-fr-reviewnotice {
+	background-color: #000;
+	color: #8C8C8C;
+	border: none;
+}
+
+[style*="#CFFF9F;"] {
+    background-color: #000 !important;
+}
+
+[style*="#CFFF9F;"] {
+    background-color: #000 !important;
+}
+
 div.vectorTabs {
 	background-image: none;
 }
