--- a/main.css
+++ b/main.css
@@ -6,17 +6,22 @@ a:visited {
 	color: purple;
 }
 
-div#simpleSearch,
-table.wikitable > tr > th, table.wikitable > tr > td, table.wikitable > * > tr > th, table.wikitable > * > tr > td,
-#pagehistory .after
-{
-	border: solid 1px darkslategrey;
+.mw-echo-notifications-badge {
+	background-color: #000 !important;
 }
 
-#pt-notifications .mw-echo-notifications-badge,
-td
-{
-	background: black !important;
+#mw-fr-reviewnotice {
+	background-color: #000;
+	color: #8C8C8C;
+	border: none;
+}
+
+[style*="#CFFF9F;"] {
+    background-color: #000 !important;
+}
+
+[style*="#CFFF9F;"] {
+    background-color: #000 !important;
 }
 
 div.vectorTabs {
@@ -38,14 +43,17 @@ div.vectorTabs li.selected {
 
 div.vectorTabs ul li{
 	background-image: none;
-	background: black;
+	background: #000;
 }
 
-h2,
-h3
-{
-	background: black;
-	color: lightgray !important;
+div#simpleSearch {
+	background: #000;
+	border: solid 1px lightgray;
+}
+
+div#simpleSearch input {
+	background: #000;
+	color: lightgray;
 }
 
 #siteSub {
@@ -58,37 +66,31 @@ h3
 }
 
 .infobox {
-	background: black;
+	background: #000;
 	color: lightgray;
 	border: 1px solid lightgray;
 }
 
-div.thumbinner, div.thumb {
-	background-color: black !important;
-	border: none !important;
+.infobox * {
+	background: #000 !important;
+}
+
+div.thumbinner {
+	background-color: #000;
+	border: 1px solid gray;
 }
 
 caption {
 	color: gray !important;
 }
 
-table {
-	background: black !important;
+table, .plainlinks {
+	background: #000 !important;
+	border: none !important;
 }
 
 table.wikitable > tr > th, table.wikitable > * > tr > th {
 	background-color: gray;
-}
-
-.navbox-title, 
-th,
-.navbox-abovebelow
-{
-	background: none !important;
-}
-
-.plainlist ul li span {
-    color: lightblue !important;
 }
 
 tr {
@@ -97,11 +99,11 @@ tr {
 
 #mw-page-base {
 	background-image: none;
-	background: black;
+	background: #000;
 }
 
 .mw-body {
-	background: black;
+	background: #000;
 	border-width: 0;
 }
 
@@ -118,7 +120,7 @@ tr {
 }
 
 #toc {
-	background: black;
+	background: #000;
 	border: 0;
 }
 
@@ -137,18 +139,18 @@ h1, h2, h3, h4, h5, h6 {
 
 code {
 	color: lightgray;
-	background: black;
+	background: #000;
 	border: 1px solid;
-}ta
+}
 
 .mw-code {
-	background: black;
+	background: #000;
 	color: lightgray;
 	border: 0;
 }
 
 pre, .mw-code {
-	background: black;
+	background: #000;
 	color: lightgray;
 	border: 0;
 }
@@ -205,44 +207,37 @@ pre, .mw-code {
 .sy1 { color: #4040a0; }
 .es1 { color: #222299; }
 .sy3 { color: #444488; }
+.nc,.nf{color: #9090DB !important;}
 
-table.ambox {
-	background: black;
+.ambox {
+	background: #000;
 	border: 1px solid lightgray;
 }
 
-table.wikitable > tr > th, table.wikitable > * > tr > th
-{
-	background-color: darkslategrey;
+table {
+	border: 1px solid darkslategrey !important;
 }
 
-.editOptions, 
-#pagehistory li
-{
-	background-color: black !important;
+blockquote {
+	background: #000;
+	border: 1px solid darkslategrey !important;
 }
 
-div#editpage-specialchars a {
-	background-color: black;
-}
-
-.ext-cards-card-list .ext-cards-card, .ext-cards-card-list, .navbox-list {
+.editOptions, .catlinks, .noprint {
+	background-color: #000 !important;
 	border: none !important;
 }
 
-input[type=submit] {
-	background: darkslategray;
-    border: none;
-    color: lightgray;
-    border-radius: 5px;
-    font-size: 35px;
+div[style*="#FCFCCC;"] {
+	background-color: #303023 !important;
 }
 
-input, select {
-    background: black;
-    border: 1px solid darkslategrey;
-    color: lightgray;
-    font-size: 35px;
+div[style*="#FFE7CC;"] {
+	background-color: #322312 !important;
+}
+
+div#editpage-specialchars a {
+	background-color: #000;
 }
 
 #footer {
