add .mw-highlight: #000

--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@ div#simpleSearch {
 html,
 [style*="#CFFF9F;"],
 .mw-echo-notifications-badge, 
+.mw-highlight,
 aside li, /* related articles */
 .NavHead,
 [style*="#CFFF9F;"],
