--- a/main.css
+++ b/main.css
@@ -273,3 +273,27 @@ html {
     scrollbar-width: thin;
     scrollbar-color: #555 #000;
 }
+
+
+
+.mwe-math-mathml-a11y {
+    clip: auto !important;
+    overflow: visible !important;
+    position: static !important;
+    width: auto !important;
+    height: auto !important;
+    opacity: 1 !important;
+    display: inherit !important;
+}
+body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
+    /* override https://phabricator.wikimedia.org/diffusion/EMAT/browse/master/modules/ve-math/ve.ce.MWLatexNode.css */
+    display: inherit !important;
+}
+/* Support where MediaWiki lazy loaded images */
+.mwe-math-mathml-inline ~ .lazy-image-placeholder,
+.mwe-math-mathml-display ~ .lazy-image-placeholder,
+/* Support where MediaWiki doesn't lazy load images */
+.mwe-math-mathml-inline + .mwe-math-fallback-image-inline,
+.mwe-math-mathml-display + .mwe-math-fallback-image-display {
+    display: none !important;
+}
