Fix background of messages on draft pages

--- a/main.css
+++ b/main.css
@@ -18,7 +18,8 @@ hr,
 }
 
 .documentation,
-.iw-resultset {
+.iw-resultset,
+.mw-parser-output .divbox-gray {
 	background-color: #000 !important;
 	border: 0 !important;
 }
