Fix template Unresolved
Example here https://en.wikipedia.org/wiki/Collatz_conjecture

--- a/main.css
+++ b/main.css
@@ -6,10 +6,11 @@ a:visited {
 	color: #b2b;
 }
 
-input {
+input,
+.unsolved {
 	background: #000 !important;
 	color: #ddd !important;
-	border-color: #555;
+	border-color: #555 !important;
 }
 
 hr,
