Drop white border on bottom navigation
On https://en.wikipedia.org/wiki/Video4Linux

--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ hr,
 #mw-fr-reviewnotice,
 .navbox,
 .navbox-group {
-	background-color: #000;
+	background-color: #000 !important;
 	color: #888;
 	border: none !important;
 }
