--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ div.vectorTabs ul li{
 	font-size: 1.5em;
 }
 
-/* Popup in editing mode */
+/* Refernce popup in editing mode */
 #mwdw {
     color: #000;
 }
