--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ div.vectorTabs ul li{
 	font-size: 1.5em;
 }
 
-/* Refernce popup in editing mode */
+/* Popup in editing mode */
 #mwdw {
     color: #000;
 }
