--- a/main.css
+++ b/main.css
@@ -97,7 +97,8 @@ div.vectorTabs ul li{
 }
 
 /* Popup in editing mode */
-#mwdw {
+#mwdw,
+.oo-ui-popupWidget-popup { /* Wikidata: popup with "Potential issue" */
     color: #000;
 }
 
