--- a/main.css
+++ b/main.css
@@ -14,14 +14,16 @@ input,
 }
 
 hr,
-#mw-head {
+#mw-head,
+.mw-specialpage-summary /* Text line "Please visit Commons:Help desk if you need to ask questions about uploading files." */ {
     display: none !important;
 }
 
 .documentation,
 .iw-resultset,
 .mw-parser-output .divbox-gray,
-.mwe-upwiz-license-metadata {
+.mwe-upwiz-license-metadata,
+figure[typeof~="mw:File/Thumb"] {
 	background-color: #000 !important;
 	border: 0 !important;
 }
@@ -59,6 +61,7 @@ tr,
 .wikibase-toolbar-wrapper,
 .mw-parser-output .responsive-license-cc,
 .wikibase-sitelinklistview .wikibase-sitelinkview .wikibase-sitelinkview-siteid-container,
+figure[typeof~="mw:File/Thumb"] > figcaption,
 .flaggedrevs-color-0 /* diff: phrase "Pending revisions" */ {
     background: #000 !important;
 }
