Talk page: fix background for label like "Low-importance"
Page example https://en.wikipedia.org/w/index.php?title=Talk:Kitty_(terminal_emulator)&diff=next&oldid=1067515733

--- a/main.css
+++ b/main.css
@@ -342,6 +342,10 @@ div[style*="#FFE7CC;"] {
 	background-color: #322312 !important;
 }
 
+span[style*='background:#FFE7FF;'] {
+	background: 0 !important;
+}
+
 .diffchange {
 	background: #855 !important;
 }
