--- a/main.css
+++ b/main.css
@@ -86,6 +86,39 @@ figure[typeof~="mw:File/Thumb"] > figcaption,
 	background: #330;
 }
 
+/* Page diff: tag. For example
+ * https://commons.wikimedia.org/w/index.php?title=File:Rudna--culture-club.jpg&diff=next&oldid=772568011
+ */
+.mw-tag-markers {
+	background: #311;
+}
+
+.licensetpl_wrapper {
+	background: #222 !important;
+	border: 0 !important;
+}
+
+/* Revisions interactive widget, for example here
+ * https://commons.wikimedia.org/w/index.php?diff=846250953&oldid=772568011&title=File:Rudna--culture-club.jpg
+ */
+ .mw-revslider-container,
+ .mw-revslider-slider-wrapper {
+	border: 0 !important;
+ }
+ .oo-ui-buttonElement-frameless.oo-ui-widget-enabled > .oo-ui-buttonElement-button:hover {
+	color: #555 !important;
+ }
+.mw-revslider-revision {
+	background: #444 !important;
+}
+.mw-revslider-revision-border-box {
+	border: 0;
+}
+.oo-ui-buttonElement-framed.oo-ui-widget-disabled > .oo-ui-buttonElement-button {
+	background: 0 !important;
+	border: 0 !important;
+}
+
 .quotebox,
 .oo-ui-buttonElement-framed.oo-ui-widget-enabled > .oo-ui-buttonElement-button,
 .oo-ui-tagMultiselectWidget-handle {
