--- a/main.css
+++ b/main.css
@@ -224,11 +224,6 @@ th {
 	border-color: #222 !important;
 }
 
-#mw-page-base {
-	background-image: none;
-	background: #000;
-}
-
 .mw-body {
 	background: #000;
 	border-width: 0;
@@ -242,7 +237,9 @@ aside p, /* related articles: titles & second line with desc*/
 	color: lightgray !important;
 }
 
-#mw-panel {
+#mw-panel,
+#mw-page-base
+{
 	display:none;
 }
  
@@ -400,6 +397,11 @@ span[style*='background:#FFE7FF;'] {
 /* Wikisource: top-right download block */
 div[style*='#F3F3F3;'] {
 	background: 0 !important;
+}
+
+/* H1 https://be.wiktionary.org/wiki/спатканне */
+div[style='background-color:#d4e4f4;'] {
+	background: #123 !important;
 }
 
 .diffchange {
