--- a/main.css
+++ b/main.css
@@ -237,6 +237,14 @@ aside p, /* related articles: titles & second line with desc*/
 	color: lightgray !important;
 }
 
+/* Override previous
+ * Here https://be.wikisource.org/wiki/%D0%A1%D1%82%D0%B0%D1%80%D0%BE%D0%BD%D0%BA%D0%B0:Novaja_ziamlia_1923.pdf/286
+ * color of "Гэта старонка не была вычытаная"
+ */
+.prp-page-qualityheader {
+	color: #000 !important;
+}
+
 #mw-panel,
 #mw-page-base
 {
