Vim modeline add

--- a/main.css
+++ b/main.css
@@ -492,3 +492,5 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
     background-color: #292;
     color: #000;
 }
+
+/* vim: set filetype=css: */
