--- a/main.css
+++ b/main.css
@@ -93,7 +93,9 @@ figure[typeof~="mw:File/Thumb"] > figcaption,
 .wbmi-item.wbmi-item-read .wbmi-item-container, /* Structured data block, on file info page */
 .header-container.header-chrome, /* https://be.m.wikisource.org/wiki/Беларускі_правапіс_(1927)/Часьць_другая/32 */
 #mw-mf-page-center,
-.content .mw-index-pager-list-header
+.content .mw-index-pager-list-header,
+#doc,
+.ts-doc-header
 {
     background: #000 !important;
 }
@@ -148,7 +150,9 @@ figure[typeof~="mw:File/Thumb"] > figcaption,
 .mw-revslider-revision {
 	background: #444 !important;
 }
-.wbmi-entityview-captionsPanel {
+.wbmi-entityview-captionsPanel,
+.mw-parser-output .ts-doc-doc
+{
 	border-color: #333 !important;
 }
 .mw-revslider-revision-border-box {
