Page editing: border of block after textarea

--- a/main.css
+++ b/main.css
@@ -158,7 +158,8 @@ figure[typeof~="mw:File/Thumb"] > figcaption,
 	background: #444 !important;
 }
 .wbmi-entityview-captionsPanel,
-.mw-parser-output .ts-doc-doc
+.mw-parser-output .ts-doc-doc,
+#editpage-specialchars
 {
 	border-color: #333 !important;
 }
